@@ -1,0 +1,6 @@
+
+horse 0x2d7 ( )
+	{
+	if (UcEvent == 1)
+		UI_item_say(UcItem, "I am NOT Smith, foolish Avatar!");
+	}
